Replacing guava APIs with native Java 8